fixed : 🐛responsive on mobile

--- a/wwwroot/css/notification.css
+++ b/wwwroot/css/notification.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     width: 60vw;
-    margin: 4% 0 4% 0;
+    margin: 2% 0 2% 0;
 }
 
 header {
@@ -99,8 +99,15 @@ main .notification-container{
     height: 100%;
     padding: 5rem;
     display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
     justify-content: center;
     align-items: center;
+}
+
+.default-notification div {
+    font-size: 1.2rem;
+    color: grey;
 }
 
 .notification-detail{
@@ -187,7 +194,7 @@ main .notification-container{
 }
 
 @media screen and (max-width: 768px){
-    .container{
+    /* .container{
         flex-direction: column;
         gap: 2rem;
     }
@@ -232,6 +239,84 @@ main .notification-container{
     }
 
     .hidden{
+        display: none;
+    } */
+
+    .container {
+        width: 100%;
+        margin: 0 6% 0 6%;
+    }
+
+    header {
+        margin-bottom: 1rem;
+    }
+
+    main {
+        width: 100%;
+    }
+
+    main .notification-container {
+        width: 100%;
+        gap: 0.4rem;
+        max-width: 380px;
+    }
+
+    .default-notification,
+    .notification-detail {
+        display: none;
+    }
+
+    .container-detail-mobile{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-radius: 12px;
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+    }
+
+    .container-detail-mobile .txt-over-card {
+        font-size: 1rem;
+        /* font-weight: bold; */
+        margin-top: 0.5rem;
+        align-self: flex-start;
+        margin-left: 2.5rem;
+    }
+
+    .preview-card-mobile {
+        /* background-color:rgb(255, 200, 237);  */
+        /* background-image: linear-gradient(180deg, rgba(202, 222, 252, 1) 0%, rgba(255, 226, 226, 1) 100%); */
+        /* background-image: linear-gradient(0deg, rgba(220, 214, 247, 1) 18%, rgba(255, 199, 199, 1) 100%); */
+        background-image: linear-gradient(0deg, rgba(220, 214, 247, 1) 19%, rgba(255, 199, 199, 0) 100%);
+        padding: 1.5rem; 
+        border-radius: 8px; 
+        margin: 0.5rem 0 1rem 0;
+        width: 80%;
+        height: auto;
+        box-shadow: 0 0 5px 0 rgba(220, 214, 247, 1);
+    }
+
+    .preview-card-topic-mobile h1 {
+        font-size: 1.5rem; 
+        font-weight: bold; 
+        margin: 0.5rem 0;
+    }
+
+    .preview-card-topic-mobile p {
+        font-size: 1rem; 
+        /* white-space: nowrap;  */
+        width: 100%; 
+        height: auto;
+        /* max-width: 400px;  */
+        margin-bottom: 0;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden; 
+    }
+
+    .hidden {
         display: none;
     }
 }
@@ -302,13 +387,13 @@ main .notification-container{
 
 /* ----------------------------have notification------------------------ */
 .preview-card {
-    background-color:rgb(255, 200, 237); 
+    background-image: linear-gradient(0deg, rgba(220, 214, 247, 1) 19%, rgba(255, 199, 199, 0) 100%);
     padding: 1.5rem; 
     border-radius: 8px; 
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     width: 100%;
     height: auto;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px 0 rgba(220, 214, 247, 1);
 }
 
 .app-name {
@@ -341,4 +426,8 @@ main .notification-container{
     margin-top: 0.5rem;
     color: blue;
     text-decoration: underline;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden; 
 }
